<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Pegar nova foto" />
        <item
            android:id="@+id/nav_converte_cinza"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Converte para cinza" />
    </group>

    <item android:title="Efeitos">
        <menu>
            <item
                android:id="@+id/nav_efeito1"
                android:title="@string/efeito1" />
            <item
                android:id="@+id/nav_efeito2"
                android:title="@string/efeito2" />
            <item
                android:id="@+id/nav_efeito3"
                android:title="@string/efeito3" />
            <item
                android:id="@+id/nav_efeito4"
                android:title="@string/efeito4" />
            <item
                android:id="@+id/nav_efeito5"
                android:title="@string/efeito5" />
        </menu>
    </item>
    <item android:title="Menu 2">
        <menu>
            <item
                android:id="@+id/nav_share1"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send2"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
